fixed nav li alignment

--- a/assignments/lesson-4/css/medium.css
+++ b/assignments/lesson-4/css/medium.css
@@ -15,7 +15,7 @@
     /*----------- NAVIGATION --------------*/
         nav ul {margin-left: 2%;}
         nav ul li {float: left;}
-    
+        nav li {float: left; width: 16%;}
         nav ul li a {padding: .5rem 1rem;}
     
     
