--- a/assignments/lesson-4/css/small.css
+++ b/assignments/lesson-4/css/small.css
@@ -41,9 +41,9 @@
         padding: 1rem 2%;
         display: block;
     }
-    main h1 {padding: 0 2%; margin: 0; color: rgb(39, 110, 218);}
+    main h1 {padding: 1rem 2%; margin: 0; color: rgb(39, 110, 218);}
 
-    main h2 { color: rgb(118, 161, 224)}
+    main h2 { color: rgb(118, 161, 224); padding: 0;}
 
     figure { margin: 0; width: 100%;}
     figure img {width: 100%;}
